[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Left_Controller.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Right_Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Player_Controller.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 0.4
height = 0.8

[node name="Player" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.299335, 0, 0 )
collision_layer = 2
collision_mask = 0
mode = 2
mass = 80.0
physics_material_override = SubResource( 1 )
can_sleep = false

[node name="ARVROrigin" type="ARVROrigin" parent="."]
script = ExtResource( 3 )

[node name="Player_Camera" type="ARVRCamera" parent="ARVROrigin"]
current = true

[node name="RayCast" type="RayCast" parent="ARVROrigin/Player_Camera"]
cast_to = Vector3( 0, -20, 0 )
collision_mask = 4
collide_with_areas = true

[node name="Left_Controller" parent="ARVROrigin" instance=ExtResource( 1 )]

[node name="Right_Controller" parent="ARVROrigin" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.7, 0 )
shape = SubResource( 2 )
